--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,2 +1,11 @@
 fastapi==0.115.0
 uvicorn[standard]==0.32.0
+sqlalchemy>=2.0.35
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.6
+httpx==0.25.2
+python-dotenv==1.0.0
+resend==0.8.0
+authlib==1.3.0
+itsdangerous==2.1.2
