--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "axios": "^1.6.0",
     "papaparse": "^5.4.1",
+    "plotly.js-dist-min": "^2.27.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
