--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.0",
+    "exceljs": "^4.4.0",
     "papaparse": "^5.4.1",
-    "plotly.js-dist-min": "^2.27.1",
-    "xlsx": "^0.18.5"
+    "plotly.js-basic-dist-min": "^3.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
     "@types/papaparse": "^5.3.14",
     "concurrently": "^8.2.2",
     "typescript": "^5.3.0",
-    "vite": "^5.0.0"
+    "vite": "^7.2.4"
   }
 }
